--- a/Tucil1-ML/play-tennis.ipynb
+++ b/Tucil1-ML/play-tennis.ipynb
@@ -597,17 +597,12 @@
    "metadata": {},
    "source": [
     "### Analysis\n",
-    "<p>Dengan menggunakan dataset Play Tennis, algoritma Neural Network menempati posisi terbaik dalam skor akurasi dan F1. Jika diurutkan dari yang terbaik dari segi skor akurasi dan skor F1 maka urutannya adalah Neural Network, Decision Tree, ID3 Estimator, Logistic Regression, dan SVM menempati posisi posisi yang setara, serta KMeans.</p>\n",
+    "<p>Dengan menggunakan dataset Play Tennis, algoritma Neural Network menempati posisi terbaik dalam skor akurasi dan F1. Jika diurutkan dari yang terbaik dari segi skor akurasi dan skor F1 maka urutannya adalah Neural Network, Decision Tree, ID3 Estimator, Logistic Regression, dan SVM menempati posisi yang setara, serta KMeans.</p>\n",
     "<br>\n",
     "<p>Neural Network menjadi yang terbaik mungkin dikarenakan NN dengan mudah mengenali pattern dari hubungan antardata</p>\n",
     "<p>Decision Tree, ID3 Estimator, Logistic Regression, dan SVM menempati posisi terbaik setelahnya mungkin dikarenakan dataset yang kurang besar sehingga akurasi tidak begitu besar sehingga data training sangat sedikit tetapi output yang hanya merupakan Binary (True or False) memudahkan algoritma untuk membuat keputusan.</p>\n",
     "<p>KMeans tidak cocok digunakan dalam dataset ini mungkin dikarenakan dataset memiliki outliers dan KMeans sangat sensitif dengan outliers</p>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
