--- a/TP_13519022_13519032/Tugas_Pendahuluan_IF3270.ipynb
+++ b/TP_13519022_13519032/Tugas_Pendahuluan_IF3270.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 156,
    "metadata": {
     "id": "zsBbpcIi7fHi"
    },
@@ -42,7 +42,8 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn import svm\n",
     "from sklearn.ensemble import VotingClassifier, StackingClassifier\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
@@ -617,24 +618,263 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2. Visualisasi distribusi dari tiap fitur (kategorikal dan kontinu): \n",
-      "3. Visualisasi distribusi dari tiap fitur, dengan data dibagi tiap unique values fitur survived\n"
+      "2. Visualisasi distribusi dari tiap fitur (kategorikal dan kontinu): \n"
      ]
     }
    ],
    "source": [
-    "print(\"2. Visualisasi distribusi dari tiap fitur (kategorikal dan kontinu): \")\n",
-    "# print(df.describe(include = \"all\"))\n",
-    "# for cat in df_categ:\n",
-    "#     df.boxplot(by =cat, column =['pclass'], grid = False)\n",
+    "print(\"2. Visualisasi distribusi dari tiap fitur (kategorikal dan kontinu): \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"index : \")\n",
+    "df['index'].plot.box()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"pclass : \")\n",
+    "df['pclass'].plot.box()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"survived : \")\n",
+    "df['survived'].plot.box()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"name : \")\n",
+    "GroupedData=df.groupby(by=\"name\").size()\n",
+    "print(GroupedData.plot.box())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"sex : \")\n",
+    "GroupedData=df.groupby(by=\"sex\").size()\n",
+    "print(GroupedData.plot.box())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"age : \")\n",
+    "df['age'].plot.box()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"sibsp : \")\n",
+    "df['sibsp'].plot.box()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"parch : \")\n",
+    "df['parch'].plot.box()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"ticket : \")\n",
+    "GroupedData=df.groupby(by=\"ticket\").size()\n",
+    "print(GroupedData.plot.box())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"fare : \")\n",
+    "df['fare'].plot.box()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"cabin : \")\n",
+    "GroupedData=df.groupby(by=\"cabin\").size()\n",
+    "print(GroupedData.plot.box())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"embarked : \")\n",
+    "GroupedData=df.groupby(by=\"embarked\").size()\n",
+    "print(GroupedData.plot.box())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(\"3. Visualisasi distribusi dari tiap fitur, dengan data dibagi tiap unique values fitur survived\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"index : \")\n",
+    "df.boxplot(by ='survived', column =['index'], grid = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"pclass : \")\n",
+    "df.boxplot(by ='survived', column =['pclass'], grid = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"name : \")\n",
+    "df.boxplot(by ='name', column =['survived'], grid = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"sex : \")\n",
+    "df.boxplot(by ='sex', column =['survived'], grid = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"age : \")\n",
+    "df.boxplot(by ='survived', column =['age'], grid = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"sibsp : \")\n",
+    "df.boxplot(by ='survived', column =['sibsp'], grid = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"parch : \")\n",
+    "df.boxplot(by ='survived', column =['parch'], grid = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"ticket : \")\n",
+    "df.boxplot(by ='ticket', column =['survived'], grid = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"fare : \")\n",
+    "df.boxplot(by ='survived', column =['fare'], grid = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"cabin : \")\n",
+    "df.boxplot(by ='cabin', column =['survived'], grid = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"embarked : \")\n",
+    "df.boxplot(by ='embarked', column =['survived'], grid = False)"
    ]
   },
   {
@@ -660,7 +900,92 @@
    },
    "outputs": [],
    "source": [
-    "# I.4 Put your code here"
+    "print(\"1. Penambahan fitur jika memungkinkan\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"2. Pembuangan fitur yang menurut kalian tidak dibutuhkan\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"3. Penanganan missing values\")\n",
+    "print(\"Penanganan Missing Value akan dilakukan dengan metode 'Filling null values with the previous ones'\")\n",
+    "print(\"dan 'Filling null value with the next ones'\")\n",
+    "print(\"Kedua metode ini mengisi missing value dengan nilai dari instance sebelumnya dan instance sesudahnya\")\n",
+    "# Mengisi missing value dengan nilai dari instance sebelumnya kemudian dengan nilai instance sesudahnya\n",
+    "print(df.fillna(method ='pad').fillna(method ='bfill').isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"4. Transformasi data kategorikal menjadi numerikal (encoding), dengan metode yang kalian inginkan\")\n",
+    "print(\"Metode transformasi yang kami gunakan adalah dengan mengganti setiap unique value dari feature kategorikal\")\n",
+    "print(\"menjadi angka numerik yang membedakan setiap unique value\")\n",
+    "# pd.get_dummies(df, prefix=None, prefix_sep='_', dummy_na=False, columns=None, sparse=False, drop_first=False, dtype=None)\n",
+    "arr_uniq_name = []\n",
+    "arr_uniq_sex = []\n",
+    "arr_uniq_ticket = []\n",
+    "arr_uniq_cabin = []\n",
+    "arr_uniq_embarked = []\n",
+    "\n",
+    "for i in range(1, df['name'].nunique() + 1):\n",
+    "    arr_uniq_name.append(i)\n",
+    "for i in range(1, df['sex'].nunique() + 1):\n",
+    "    arr_uniq_sex.append(i)\n",
+    "for i in range(1, df['ticket'].nunique() + 1):\n",
+    "    arr_uniq_ticket.append(i)\n",
+    "for i in range(1, df['cabin'].nunique() + 1):\n",
+    "    arr_uniq_cabin.append(i)\n",
+    "for i in range(1, df['embarked'].nunique() + 1):\n",
+    "    arr_uniq_embarked.append(i)\n",
+    "\n",
+    "df['name'].replace(df['name'].unique(),\n",
+    "                        arr_uniq_name, inplace=True)\n",
+    "df['sex'].replace(df['sex'].unique(),\n",
+    "                        arr_uniq_sex, inplace=True)\n",
+    "df['ticket'].replace(df['ticket'].unique(),\n",
+    "                        arr_uniq_ticket, inplace=True) \n",
+    "df['cabin'].replace(df['cabin'].unique(),\n",
+    "                        arr_uniq_cabin, inplace=True)  \n",
+    "df['embarked'].replace(df['embarked'].unique(),\n",
+    "                        arr_uniq_embarked, inplace=True)       \n",
+    "\n",
+    "print(df['name'])\n",
+    "print(df['sex'])\n",
+    "print(df['ticket'])\n",
+    "print(df['cabin'])\n",
+    "print(df['embarked'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"5. Lakukan scaling dengan MinMaxScaler\")\n",
+    "scaler = MinMaxScaler()\n",
+    " \n",
+    "df_scaled = scaler.fit_transform(df.to_numpy())\n",
+    "df_scaled = pd.DataFrame(df_scaled, columns=[\n",
+    "  'index', 'pclass', 'survived', 'name', 'sex', 'age', 'sibsp', 'parch', 'ticket', 'fare', 'cabin', 'embarked'])\n",
+    " \n",
+    "print(\"Scaled Dataset Using MinMaxScaler\")\n",
+    "df_scaled.head()"
    ]
   },
   {
