--- a/TP_13519022_13519032/Tugas_Pendahuluan_IF3270.ipynb
+++ b/TP_13519022_13519032/Tugas_Pendahuluan_IF3270.ipynb
@@ -1762,8 +1762,17 @@
     "id": "e9x0VH2AAkwZ"
    },
    "source": [
-    "Put your answer for section IV here"
+    "Model Baseline : Memiliki Presisi, F1, dan Recall yang cukup tinggi. Model mampu membuat prediksi True Positives </br>\n",
+    "Model lain :  Memiliki Presisi, F1, dan Recall yang cukup tinggi. Model mampu membuat prediksi True Positives</br>\n",
+    "Soft Voting : Tidak memiliki nilai</br>\n",
+    "Hard Voting : Memiliki Presisi, F1, dan Recall yang cukup rendah tapi masih lebih tinggi dari Stacking. Model kurang mampu membuat prediksi True Positives</br>\n",
+    "Stacking : Memiliki Presisi, F1, dan Recall yang cukup rendah. Model kurang mampu membuat prediksi True Positives</br>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
