--- a/TP_13519022_13519032/Tugas_Pendahuluan_IF3270.ipynb
+++ b/TP_13519022_13519032/Tugas_Pendahuluan_IF3270.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 1,
    "metadata": {
     "id": "zsBbpcIi7fHi"
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "id": "OWLkjeKo7gdD"
    },
@@ -289,7 +289,7 @@
        "[1309 rows x 12 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "id": "Gqa9nn5muMS2"
    },
@@ -1056,7 +1056,7 @@
        "Name: sex, Length: 1309, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
        "False"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {
     "id": "EpEqAz94yyQo"
    },
@@ -1239,13 +1239,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
     "id": "bLLLsyoF2GIM"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: imblearn in c:\\users\\fahkry\\anaconda3\\lib\\site-packages (0.0)\n",
+      "Requirement already satisfied: imbalanced-learn in c:\\users\\fahkry\\anaconda3\\lib\\site-packages (from imblearn) (0.9.0)\n",
+      "Requirement already satisfied: scipy>=1.1.0 in c:\\users\\fahkry\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (1.7.3)\n",
+      "Requirement already satisfied: numpy>=1.14.6 in c:\\users\\fahkry\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (1.21.5)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\fahkry\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (2.2.0)\n",
+      "Requirement already satisfied: scikit-learn>=1.0.1 in c:\\users\\fahkry\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (1.0.2)\n",
+      "Requirement already satisfied: joblib>=0.11 in c:\\users\\fahkry\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (1.1.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "# III.1 Put your code here"
+    "%pip install imblearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score: 0.774\n"
+     ]
+    }
+   ],
+   "source": [
+    "from numpy import mean\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from imblearn.pipeline import Pipeline\n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "# define pipeline\n",
+    "steps = [('over', RandomOverSampler()), ('model', model)]\n",
+    "pipeline = Pipeline(steps=steps)\n",
+    "# evaluate pipeline\n",
+    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+    "scores = cross_val_score(pipeline, x_train, y_train, scoring='f1_micro', cv=cv, n_jobs=-1)\n",
+    "score = mean(scores)\n",
+    "print('F1 Score: %.3f' % score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score: 0.771\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define pipeline\n",
+    "steps = [('under', RandomUnderSampler()), ('model', model)]\n",
+    "pipeline = Pipeline(steps=steps)\n",
+    "# evaluate pipeline\n",
+    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+    "scores = cross_val_score(pipeline, x_train, y_train, scoring='f1_micro', cv=cv, n_jobs=-1)\n",
+    "score = mean(scores)\n",
+    "print('F1 Score: %.3f' % score)"
    ]
   },
   {
@@ -1796,7 +1867,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
