--- a/1649020907823_IF3270_Praktikum/PraktikumIF3270_M1_13519022_13519032.ipynb
+++ b/1649020907823_IF3270_Praktikum/PraktikumIF3270_M1_13519022_13519032.ipynb
@@ -171,8 +171,8 @@
     "df_test['bmi'].fillna(df_test['bmi'].mean(), inplace= True)\n",
     "df_val['bmi'].fillna(df_val['bmi'].mean(), inplace= True)\n",
     "model = LogisticRegression()\n",
-    "model.fit(df_train, y_train)\n",
-    "model.predict(X_val)\n",
+    "# model.fit(df_train, y_train)\n",
+    "# model.predict(X_val)\n",
     "df_train['gender'].unique()\n"
    ]
   },
