--- a/1649020907823_IF3270_Praktikum/PraktikumIF3270_M1_13519022_13519032.ipynb
+++ b/1649020907823_IF3270_Praktikum/PraktikumIF3270_M1_13519022_13519032.ipynb
@@ -95,28 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "id                   204168.00\n",
-       "gender                    1.00\n",
-       "age                     182.00\n",
-       "hypertension              2.00\n",
-       "heart_disease             0.00\n",
-       "ever_married              3.00\n",
-       "work_type                 8.00\n",
-       "Residence_type            4.00\n",
-       "avg_glucose_level       435.86\n",
-       "bmi                     169.30\n",
-       "smoking_status            6.00\n",
-       "stroke                    0.00\n",
-       "dtype: float64"
+       "array([0, 0, 0, ..., 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,15 +149,15 @@
     "df_test['bmi'].fillna(df_test['bmi'].mean(), inplace= True)\n",
     "df_val['bmi'].fillna(df_val['bmi'].mean(), inplace= True)\n",
     "model = LogisticRegression()\n",
-    "# model.fit(df_train, y_train)\n",
-    "# model.predict(X_val)\n",
-    "df_train['gender'].unique()\n",
-    "df_train.head().sum()\n"
+    "X_train = df_train.drop(columns=\"stroke\")\n",
+    "y_train = df_train[\"stroke\"].copy()\n",
+    "model.fit(X_train, y_train)\n",
+    "model.predict(X_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +166,7 @@
        "False"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
