--- a/1649020907823_IF3270_Praktikum/PraktikumIF3270_M1_13519022_13519032.ipynb
+++ b/1649020907823_IF3270_Praktikum/PraktikumIF3270_M1_13519022_13519032.ipynb
@@ -95,9 +95,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, ..., 0, 0, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1. Ubah categorical \n",
     "lb = LabelEncoder()\n",
@@ -146,16 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 2])"
+       "False"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,6 +448,68 @@
     "\n",
     "for col in df_test.columns:\n",
     "    print(col + \": \" + str(outlier_data_test(col)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balance of Data: \n",
+      " Oversampling: \n",
+      " F1 Score: 0.691\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Balance of Data: \")\n",
+    "print(\" Oversampling: \")\n",
+    "from numpy import mean\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from imblearn.pipeline import Pipeline\n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "# define pipeline\n",
+    "steps = [('over', RandomOverSampler()), ('model', model)]\n",
+    "pipeline = Pipeline(steps=steps)\n",
+    "# evaluate pipeline\n",
+    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+    "scores = cross_val_score(pipeline, X_train, y_train, scoring='f1_micro', cv=cv, n_jobs=-1)\n",
+    "score = mean(scores)\n",
+    "print(' F1 Score: %.3f' % score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Undersampling: \n",
+      " F1 Score: 0.687\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\" Undersampling: \")\n",
+    "# define pipeline\n",
+    "steps = [('under', RandomUnderSampler()), ('model', model)]\n",
+    "pipeline = Pipeline(steps=steps)\n",
+    "# evaluate pipeline\n",
+    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+    "scores = cross_val_score(pipeline, X_train, y_train, scoring='f1_micro', cv=cv, n_jobs=-1)\n",
+    "score = mean(scores)\n",
+    "print(' F1 Score: %.3f' % score)"
    ]
   },
   {
